name:            gregweber
version:         0.1
license:         BSD3
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Greg Weber's Programming blog
description:     Greg Weber's Programming blog

stability:       Stable
cabal-version:   >= 1.6 
build-type:      Simple
homepage:        http://blog.gregweber.info

executable hakyll
  Main-is: hakyll.hs
  build-depends:   base
                 , containers
                 , hakyll
                 , hamlet == 0.7.*

source-repository head
  type:     git 
  location: http://github.com/gregwebs/blog.gregweber.info
