name:            gregweber
version:         0.1
license:         BSD3
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Greg Weber's Programming blog
description:     Greg Weber's Programming blog

stability:       Stable
cabal-version:   >= 1.6 
build-type:      Simple
homepage:        http://blog.gregweber.info

executable static-pages
  Main-is: static-pages.hs
  extensions: OverloadedStrings
  build-depends:   base  >= 4.5
                 , yesod >= 1.2
                 , yesod-static
                 , shakespeare-text
                 , markdown
                 , wai-static-pages >= 0.2
                 , text
                 , blaze-html
                 , data-default
                 , template-haskell
                 , hamlet
                 , yaml
                 , unordered-containers
                 , shelly
                 , system-filepath

source-repository head
  type:     git 
  location: http://github.com/gregwebs/blog.gregweber.info
